Format MAC address in the lower case

--- a/app/Blink/config.json
+++ b/app/Blink/config.json
@@ -1,38 +1,38 @@
 {
-    "sensor": "00-17-0D-00-00-38-05-E9",
+    "tag": "00-17-0d-00-00-38-05-e9",
     "anchors": [
-        "00-17-0D-00-00-31-C1-A0",
-        "00-17-0D-00-00-31-C1-AB",
-        "00-17-0D-00-00-31-C1-C1",
-        "00-17-0D-00-00-31-C3-19",
-        "00-17-0D-00-00-31-C3-37",
-        "00-17-0D-00-00-31-C3-3E",
-        "00-17-0D-00-00-31-C3-71",
-        "00-17-0D-00-00-31-C6-A1",
-        "00-17-0D-00-00-31-C6-B8",
-        "00-17-0D-00-00-31-C7-B0",
-        "00-17-0D-00-00-31-C7-DE",
-        "00-17-0D-00-00-31-C9-E6",
-        "00-17-0D-00-00-31-C9-F1",
-        "00-17-0D-00-00-31-CA-03",
-        "00-17-0D-00-00-31-CA-05",
-        "00-17-0D-00-00-31-CB-E5",
-        "00-17-0D-00-00-31-CB-E7",
-        "00-17-0D-00-00-31-CC-0F",
-        "00-17-0D-00-00-31-CC-2E",
-        "00-17-0D-00-00-31-CC-40",
-        "00-17-0D-00-00-31-CC-58",
-        "00-17-0D-00-00-31-D1-70",
-        "00-17-0D-00-00-31-D1-A8",
-        "00-17-0D-00-00-31-D1-AC",
-        "00-17-0D-00-00-31-D1-D3",
-        "00-17-0D-00-00-31-D4-7E",
-        "00-17-0D-00-00-31-D5-01",
-        "00-17-0D-00-00-31-D5-1F",
-        "00-17-0D-00-00-31-D5-20",
-        "00-17-0D-00-00-31-D5-30",
-        "00-17-0D-00-00-31-D5-3B",
-        "00-17-0D-00-00-31-D5-69",
-        "00-17-0D-00-00-31-D5-86"
+        "00-17-0d-00-00-31-c1-a0",
+        "00-17-0d-00-00-31-c1-ab",
+        "00-17-0d-00-00-31-c1-c1",
+        "00-17-0d-00-00-31-c3-19",
+        "00-17-0d-00-00-31-c3-37",
+        "00-17-0d-00-00-31-c3-3e",
+        "00-17-0d-00-00-31-c3-71",
+        "00-17-0d-00-00-31-c6-a1",
+        "00-17-0d-00-00-31-c6-b8",
+        "00-17-0d-00-00-31-c7-b0",
+        "00-17-0d-00-00-31-c7-de",
+        "00-17-0d-00-00-31-c9-e6",
+        "00-17-0d-00-00-31-c9-f1",
+        "00-17-0d-00-00-31-ca-03",
+        "00-17-0d-00-00-31-ca-05",
+        "00-17-0d-00-00-31-cb-e5",
+        "00-17-0d-00-00-31-cb-e7",
+        "00-17-0d-00-00-31-cc-0f",
+        "00-17-0d-00-00-31-cc-2e",
+        "00-17-0d-00-00-31-cc-40",
+        "00-17-0d-00-00-31-cc-58",
+        "00-17-0d-00-00-31-d1-70",
+        "00-17-0d-00-00-31-d1-a8",
+        "00-17-0d-00-00-31-d1-ac",
+        "00-17-0d-00-00-31-d1-d3",
+        "00-17-0d-00-00-31-d4-7e",
+        "00-17-0d-00-00-31-d5-01",
+        "00-17-0d-00-00-31-d5-1f",
+        "00-17-0d-00-00-31-d5-20",
+        "00-17-0d-00-00-31-d5-30",
+        "00-17-0d-00-00-31-d5-3b",
+        "00-17-0d-00-00-31-d5-69",
+        "00-17-0d-00-00-31-d5-86"
     ]
 }
