manager: add location to anchor entry

--- a/app/Blink/config.json
+++ b/app/Blink/config.json
@@ -1,38 +1,39 @@
 {
     "tag": "00-17-0d-00-00-38-05-e9",
+    "manager": ["00-17-0d-00-00-30-3e-09", "A124"],
     "anchors": [
-        "00-17-0d-00-00-31-c1-a0",
-        "00-17-0d-00-00-31-c1-ab",
-        "00-17-0d-00-00-31-c1-c1",
-        "00-17-0d-00-00-31-c3-19",
-        "00-17-0d-00-00-31-c3-37",
-        "00-17-0d-00-00-31-c3-3e",
-        "00-17-0d-00-00-31-c3-71",
-        "00-17-0d-00-00-31-c6-a1",
-        "00-17-0d-00-00-31-c6-b8",
-        "00-17-0d-00-00-31-c7-b0",
-        "00-17-0d-00-00-31-c7-de",
-        "00-17-0d-00-00-31-c9-e6",
-        "00-17-0d-00-00-31-c9-f1",
-        "00-17-0d-00-00-31-ca-03",
-        "00-17-0d-00-00-31-ca-05",
-        "00-17-0d-00-00-31-cb-e5",
-        "00-17-0d-00-00-31-cb-e7",
-        "00-17-0d-00-00-31-cc-0f",
-        "00-17-0d-00-00-31-cc-2e",
-        "00-17-0d-00-00-31-cc-40",
-        "00-17-0d-00-00-31-cc-58",
-        "00-17-0d-00-00-31-d1-70",
-        "00-17-0d-00-00-31-d1-a8",
-        "00-17-0d-00-00-31-d1-ac",
-        "00-17-0d-00-00-31-d1-d3",
-        "00-17-0d-00-00-31-d4-7e",
-        "00-17-0d-00-00-31-d5-01",
-        "00-17-0d-00-00-31-d5-1f",
-        "00-17-0d-00-00-31-d5-20",
-        "00-17-0d-00-00-31-d5-30",
-        "00-17-0d-00-00-31-d5-3b",
-        "00-17-0d-00-00-31-d5-69",
-        "00-17-0d-00-00-31-d5-86"
+        ["00-17-0d-00-00-31-c1-a0", "A120"],
+        ["00-17-0d-00-00-31-c1-ab", "A108"],
+        ["00-17-0d-00-00-31-c1-c1", ""],
+        ["00-17-0d-00-00-31-c3-19", "A113"],
+        ["00-17-0d-00-00-31-c3-37", "A126"],
+        ["00-17-0d-00-00-31-c3-3e", "A106"],
+        ["00-17-0d-00-00-31-c3-71", "A107"],
+        ["00-17-0d-00-00-31-c6-a1", "A105"],
+        ["00-17-0d-00-00-31-c6-b8", "A119"],
+        ["00-17-0d-00-00-31-c7-b0", "A127"],
+        ["00-17-0d-00-00-31-c7-de", ""],
+        ["00-17-0d-00-00-31-c9-e6", ""],
+        ["00-17-0d-00-00-31-c9-f1", "A121"],
+        ["00-17-0d-00-00-31-ca-03", "A116"],
+        ["00-17-0d-00-00-31-ca-05", "A109"],
+        ["00-17-0d-00-00-31-cb-e5", ""],
+        ["00-17-0d-00-00-31-cb-e7", "A112"],
+        ["00-17-0d-00-00-31-cc-0f", ""],
+        ["00-17-0d-00-00-31-cc-2e", ""],
+        ["00-17-0d-00-00-31-cc-40", "A122"],
+        ["00-17-0d-00-00-31-cc-58", "A115"],
+        ["00-17-0d-00-00-31-d1-70", "A102"],
+        ["00-17-0d-00-00-31-d1-a8", "A101"],
+        ["00-17-0d-00-00-31-d1-ac", "A118"],
+        ["00-17-0d-00-00-31-d1-d3", ""],
+        ["00-17-0d-00-00-31-d4-7e", "A123"],
+        ["00-17-0d-00-00-31-d5-01", "A117"],
+        ["00-17-0d-00-00-31-d5-1f", ""],
+        ["00-17-0d-00-00-31-d5-20", "A124"],
+        ["00-17-0d-00-00-31-d5-30", "A110"],
+        ["00-17-0d-00-00-31-d5-3b", "A114"],
+        ["00-17-0d-00-00-31-d5-69", ""],
+        ["00-17-0d-00-00-31-d5-86", "A125"]
     ]
 }
