--- a/app/Blink/config.json
+++ b/app/Blink/config.json
@@ -1,39 +1,39 @@
 {
     "tag": "00-17-0d-00-00-38-05-e9",
-    "manager": ["00-17-0d-00-00-30-3e-09", "A124"],
+    "manager": ["00-17-0d-00-00-30-3e-09", "A124", [246, 66]],
     "anchors": [
-        ["00-17-0d-00-00-31-c1-a0", "A120"],
-        ["00-17-0d-00-00-31-c1-ab", "A108"],
+        ["00-17-0d-00-00-31-c1-a0", "A120", [517, 146]],
+        ["00-17-0d-00-00-31-c1-ab", "A108", [546, 333]],
         ["00-17-0d-00-00-31-c1-c1", ""],
-        ["00-17-0d-00-00-31-c3-19", "A113"],
-        ["00-17-0d-00-00-31-c3-37", "A126"],
-        ["00-17-0d-00-00-31-c3-3e", "A106"],
-        ["00-17-0d-00-00-31-c3-71", "A107"],
-        ["00-17-0d-00-00-31-c6-a1", "A105"],
-        ["00-17-0d-00-00-31-c6-b8", "A119"],
-        ["00-17-0d-00-00-31-c7-b0", "A127"],
-        ["00-17-0d-00-00-31-c7-de", "A104"],
+        ["00-17-0d-00-00-31-c3-19", "A113", [772, 289]],
+        ["00-17-0d-00-00-31-c3-37", "A126", [136, 168]],
+        ["00-17-0d-00-00-31-c3-3e", "A106", [417, 285]],
+        ["00-17-0d-00-00-31-c3-71", "A107", [467, 351]],
+        ["00-17-0d-00-00-31-c6-a1", "A105", [373, 275]],
+        ["00-17-0d-00-00-31-c6-b8", "A119", [562, 185]],
+        ["00-17-0d-00-00-31-c7-b0", "A127", [127, 213]],
+        ["00-17-0d-00-00-31-c7-de", "A104", [273, 256]],
         ["00-17-0d-00-00-31-c9-e6", ""],
-        ["00-17-0d-00-00-31-c9-f1", "A121"],
-        ["00-17-0d-00-00-31-ca-03", "A116"],
-        ["00-17-0d-00-00-31-ca-05", "A109"],
+        ["00-17-0d-00-00-31-c9-f1", "A121", [435, 116]],
+        ["00-17-0d-00-00-31-ca-03", "A116", [760, 190]],
+        ["00-17-0d-00-00-31-ca-05", "A109", [580, 311]],
         ["00-17-0d-00-00-31-cb-e5", ""],
-        ["00-17-0d-00-00-31-cb-e7", "A112"],
+        ["00-17-0d-00-00-31-cb-e7", "A112", [736, 345]],
         ["00-17-0d-00-00-31-cc-0f", ""],
         ["00-17-0d-00-00-31-cc-2e", ""],
-        ["00-17-0d-00-00-31-cc-40", "A122"],
-        ["00-17-0d-00-00-31-cc-58", "A115"],
-        ["00-17-0d-00-00-31-d1-70", "A102"],
-        ["00-17-0d-00-00-31-d1-a8", "A101"],
-        ["00-17-0d-00-00-31-d1-ac", "A118"],
+        ["00-17-0d-00-00-31-cc-40", "A122", [385, 123]],
+        ["00-17-0d-00-00-31-cc-58", "A115", [813, 192]],
+        ["00-17-0d-00-00-31-d1-70", "A102", [191, 295]],
+        ["00-17-0d-00-00-31-d1-a8", "A101", [87, 267]],
+        ["00-17-0d-00-00-31-d1-ac", "A118", [629, 160]],
         ["00-17-0d-00-00-31-d1-d3", ""],
-        ["00-17-0d-00-00-31-d4-7e", "A123"],
-        ["00-17-0d-00-00-31-d5-01", "A117"],
+        ["00-17-0d-00-00-31-d4-7e", "A123", [316, 141]],
+        ["00-17-0d-00-00-31-d5-01", "A117", [679, 187]],
         ["00-17-0d-00-00-31-d5-1f", ""],
-        ["00-17-0d-00-00-31-d5-20", "A124"],
-        ["00-17-0d-00-00-31-d5-30", "A110"],
-        ["00-17-0d-00-00-31-d5-3b", "A114"],
+        ["00-17-0d-00-00-31-d5-20", "A124", [266, 87]],
+        ["00-17-0d-00-00-31-d5-30", "A110", [621, 355]],
+        ["00-17-0d-00-00-31-d5-3b", "A114", [802, 247]],
         ["00-17-0d-00-00-31-d5-69", ""],
-        ["00-17-0d-00-00-31-d5-86", "A125"]
+        ["00-17-0d-00-00-31-d5-86", "A125", [157, 69]]
     ]
 }
